--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-+<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Online Radio Station</title>
+	<img src="https://photos.app.goo.gl/yoy5rLUPheKXNguY8" alt="DRAN" width="500">
+	<title>DRAM</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Add any additional meta tags here -->
