--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<blockquote class="imgur-embed-pub" lang="en" data-id="a/AcClD71" data-context="false" ><a href="//imgur.com/a/AcClD71"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+	<script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 	<title>DRAM</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
