--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+	<img src="https://i.imgur.com/w2CrqhG.jpg" alt="DRAM" width="500">
+
 	<title>DRAM</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
