--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 	<!-- Add any additional meta tags here -->
 	<link rel="stylesheet" href="style.css">
 	<!-- Add any additional CSS files or styles here -->
+	<style>
+		body {
+			font-family: 'DIN Alternative', sans-serif;
+			letter-spacing: 0.5px;
+		}
+	</style>
 </head>
 <body>
 	<header>
