--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
 	<style>
 		body {
 			font-family: 'DIN Alternative', sans-serif;
-			letter-spacing: 0.5px;
+			letter-spacing: 0.3px;
 		}
 	</style>
 </head>
 <body>
 	<header>
-		<h1>Online Radio Station</h1>
+		<h1>DRAM</h1>
 		<!-- Add any additional header content here -->
 	</header>
 	<nav>
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="#">null</a></li>
+			<li><a href="#">null</a></li>
+			<li><a href="#">null</a></li>
 			<!-- Add any additional navigation links here -->
 		</ul>
 	</nav>
 	<main>
 		<section>
-			<h2>Now Playing</h2>
+			<h2>LISTEN</h2>
 			<audio controls>
 				<source src="https://live.dram.social/radio/8000/DRAM.mp3" type="audio/mpeg">
 			</audio>
 			<!-- Add any additional audio player content here -->
 		</section>
 		<section>
-			<h2>About</h2>
+			<h2>OBEY</h2>
 			<p>DRAM IS ONLINE</p>
 			<!-- test test test -->
 		</section>
@@ -57,7 +57,7 @@
 		</section>
 	</main>
 	<footer>
-		<p>&copy; 2023 Online Radio Station. All rights reserved.</p>
+		<p>&copy; DRAM 202X. All rights reserved.</p>
 		<!-- Add any additional footer content here -->
 	</footer>
 	<!-- Add any additional scripts or JavaScript files here -->
