--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 		body {
 			font-family: 'DIN Alternative', sans-serif;
 			letter-spacing: 0.3px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			min-height: 100vh;
 		}
 	</style>
 </head>
