--- a/index.html
+++ b/index.html
@@ -22,20 +22,14 @@
 	</style>
 </head>
 <body>
-	<header>
-		<h1>DRAM</h1>
-		<!-- Add any additional header content here -->
-	</header>
-	<nav>
-		<ul>
-			<li><a href="#">null</a></li>
-			<li><a href="#">null</a></li>
-			<li><a href="#">null</a></li>
-			<!-- Add any additional navigation links here -->
-		</ul>
-	</nav>
 	<main>
 		<section>
+<style>
+		body {
+			align-items: center;
+			justify-content: center;
+}
+	</style>
 			<h2>LISTEN</h2>
 			<audio controls>
 				<source src="https://live.dram.social/radio/8000/DRAM.mp3" type="audio/mpeg">
