--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<img src="https://i.imgur.com/w2CrqhG.jpg" alt="DRAM" width="500">
+	<img src="https://i.imgur.com/w2CrqhG.jpg" alt="DRAM" width="850">
 
 	<title>DRAM</title>
 	<meta charset="UTF-8">
@@ -37,8 +36,8 @@
 			<!-- Add any additional audio player content here -->
 		</section>
 		<section>
-			<h2>OBEY</h2>
-			<p>DRAM IS ONLINE</p>
+			<h2>DRAM IS ONLINE</h2>
+			<p>LIVE NOW</p>
 			<!-- test test test -->
 		</section>
 		<section>
